--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <h4>God</h4>
             <p>There are many gods in hinduism</p>
             <h4>Demigods</h4>
-            <p>a divine mythological figure, a god who is either part mortal, or a minor god.</p>
+            <p>A divine mythological figure, a god who is either part mortal, or a minor god.</p>
             <h4>The Dance</h4>
-            <p>The many indian cultures have dances to pray to Gods and Demigods</p>
+            <p>The many Indian cultures have dances to pray to Gods and Demigods</p>
             <h4>Trance</h4>
             <p>Watch this video of one such trance dancer</p>
         </p> 
@@ -27,18 +27,23 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/gH_RYRwVrVM" title="Dance of the DemiGod" frameborder="0" allowfullscreen></iframe>
 
     <div>
-        <p>
-            <h3>Did You Enjoy?</h3>
+        <fieldset>
+       <p>
+            <legend>Did You Enjoy?</legend>
         </p>
-        <p>Yes  <input type="radio" name="Yes" id=""></p>
-       
+        <p>
+            <input type="radio" id="Yes" name="choose" value="Yes">
+              <label for="Yes">Yes</label><br>
+           <input type="radio" id="No" name="choose" value="No">
+              <label for="No">No</label><br>
+        </p>
+        <p>
+            <label for="Comment">Comment</label>
+            <input type="text" name="Comment" />
+         </p>
+         </fieldset>   
     </div>
-    <div>
-        <p>No <input type="radio" name="No" id=""></p>
-    </div>
-    <div>
-        <p>Comment</p>
-        <input type="text" /></div>
+
     <form>
         <p>
             <h2>Join our journey into the mysteries!!</h2>
